--- a/Jungle/Home/SearchBarView.xib
+++ b/Jungle/Home/SearchBarView.xib
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -42,7 +42,7 @@
                             </constraints>
                         </view>
                     </subviews>
-                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    <color key="backgroundColor" red="1" green="0.3531808864" blue="0.31925073030000001" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                     <constraints>
                         <constraint firstItem="0sE-zs-1ro" firstAttribute="top" secondItem="5xT-QM-b6w" secondAttribute="top" constant="4" id="I8D-gL-mh2"/>
                         <constraint firstAttribute="bottom" secondItem="0sE-zs-1ro" secondAttribute="bottom" constant="4" id="Vd5-dQ-vBx"/>
@@ -60,21 +60,11 @@
                         <action selector="handleCancel:" destination="iN0-l3-epB" eventType="touchUpInside" id="zXb-Be-hdD"/>
                     </connections>
                 </button>
-                <view alpha="0.25" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HId-bQ-trX">
-                    <rect key="frame" x="0.0" y="43.5" width="375" height="0.5"/>
-                    <color key="backgroundColor" red="0.43921568630000002" green="0.50196078430000002" blue="0.47058823529999999" alpha="1" colorSpace="calibratedRGB"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="0.5" id="Hs0-KO-EOs"/>
-                    </constraints>
-                </view>
             </subviews>
             <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
             <constraints>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="gq7-rb-Icy" secondAttribute="trailing" constant="12" id="1IJ-Hn-X9H"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="HId-bQ-trX" secondAttribute="bottom" id="1mz-H5-fVU"/>
-                <constraint firstItem="HId-bQ-trX" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" id="8aP-kV-3Bs"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="5xT-QM-b6w" secondAttribute="trailing" constant="44" id="FmK-dd-sGX"/>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="HId-bQ-trX" secondAttribute="trailing" id="ZiG-J1-WEX"/>
                 <constraint firstItem="5xT-QM-b6w" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="ZxM-4M-3M3"/>
                 <constraint firstItem="5xT-QM-b6w" firstAttribute="leading" secondItem="vUN-kp-3ea" secondAttribute="leading" constant="44" id="gtb-gR-aHe"/>
                 <constraint firstItem="vUN-kp-3ea" firstAttribute="bottom" secondItem="gq7-rb-Icy" secondAttribute="bottom" id="ni2-hp-htp"/>
